--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -9,10 +10,15 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta property=’og:title’ content='4Nomia'/>
+    <meta property="og:image" content="https://i.ibb.co/Rz21LYT/4nomia-1.png"/>
+    <meta property=’og:description’ content='an online version of a popular card game'/>
+    <meta property=’og:url’ content='https://tender-hugle-c2f671.netlify.app/'/>
+<meta property='og:image:width' content='1400' />
+<meta property='og:image:height' content='737' />
+
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
