--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta property=’og:title’ content='4Nomia'/>
-    <meta property="og:image" content="https://i.ibb.co/Rz21LYT/4nomia-1.png"/>
+    <meta property="og:image" content="https://i.ibb.co/1MfVDR1/coverphoto.png"/>
     <meta property=’og:description’ content='an online version of a popular card game'/>
     <meta property=’og:url’ content='https://tender-hugle-c2f671.netlify.app/'/>
 <meta property='og:image:width' content='1400' />
